Corrected read/unread emails showing wrong colour in mailbox

--- a/mail/static/mail/styles.css
+++ b/mail/static/mail/styles.css
@@ -12,6 +12,6 @@ textarea {
     cursor: pointer;
 }
 
-.unread {
+.read {
     background-color: grey;
 }
